Update to recent TeaseLib changes